--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/20.4.27/miui_MIMIX3_20.4.27_8f7879221b_10.0.zip
-  ROM_NAME: MIUI
+  ROM_URL: https://down.warbler.cc/d/LZYs/GSI/OriginOS/OriginOS1.0-IQOO-AB-10-2021.02.25-LZYGSI.7z
+  ROM_NAME: OriginOS
   BUILD_TYPE: ab
   TZ: Asia/Shanghai
 
