--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://kumisystems.dl.sourceforge.net/project/nippongsi/Nord.zip
-  ROM_NAME: MIUI
+  ROM_URL: http://sysupwrdl.vivo.com.cn/upgrade/official/officialFiles/PD2073_A_1.7.31-update-full_1624240784.zip
+  ROM_NAME: OriginOS
   BUILD_TYPE: ab
   TZ: Asia/Shanghai
 
